# sql-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config-example.toml  pyproject.toml
src/data_cleanup/: __init__.py  data_cleanup.py  data_cleanup_config.py  data_cleanup_types.py  data_cleanup_utils.py
src/data_compare/: __init__.py  comparison.py  data_compare.py  data_compare_types.py  data_compare_utils.py
src/db_diagram/: __init__.py  db_diagram.py  db_diagram_types.py  db_diagram_utils.py
src/obj_compare/: __init__.py  config.toml  fetch_objects.py  obj_compare.py  proc_compare.py  view_compare.py
src/object_compare/: __init__.py  compare_utils.py  fetch_objects.py  object_compare.py  object_compare_fetch_mssql.py  object_compare_fetch_objects.py  object_compare_fetch_pg.py
src/schema_size/: __init__.py  config.toml  schema_size.py  schema_size_types.py  schema_size_utils.py
src/sql_to_parquet/: config.toml  sql_to_parquet.py  sql_to_parquet_types.py
src/usp_tester/: __init__.py  config.toml  usp_tester.py  utils.py
src/utils/: __init__.py  config_utils.py  connection_utils.py  db_util_types.py  db_utils.py  rich_utils.py  utils.py
src/view_tester/: config.toml  view_tester.py
